add image and set background to paper_3.png

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ h2.lobster-font {
 /***********************/
 
 body {
-    background-image: url('../img/background/skulls.png');
+    background-image: url('../img/background/paper_3.png');
     font-family: arial, sans-serif;
     font-size: 22px;
     color: #3b3b3b;
