--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,8 @@ h2.lobster-font {
 /***********************/
 body {
 	/* 	background-image: url('../img/background/paper_3.png'); */
-	background-color: #fff; font-family : proxima-nova, sans-serif;
+	background-color: #fff;
+	font-family: proxima-nova, sans-serif;
 	font-size: 22px;
 	color: #3b3b3b;
 	margin: 0;
@@ -72,7 +73,7 @@ body {
 	margin-top: 20px;
 	margin-right: auto;
 	margin-left: auto;
-	height: 600px;
+	min-height: 600px;
 	max-width: 1200px;
 }
 
@@ -109,11 +110,11 @@ body {
 
 .btn {
 	background: #3498db;
-	background-image: -webkit-linear-gradient(top, #3498db, #3498db);
-	background-image: -moz-linear-gradient(top, #3498db, #3498db);
-	background-image: -ms-linear-gradient(top, #3498db, #3498db);
-	background-image: -o-linear-gradient(top, #3498db, #3498db);
-	background-image: linear-gradient(to bottom, #3498db, #3498db);
+	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+	background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+	background-image: -o-linear-gradient(top, #3498db, #2980b9);
+	background-image: linear-gradient(to bottom, #3498db, #2980b9);
 	/* #2980b9 */
 	-webkit-border-radius: 0;
 	-moz-border-radius: 0;
@@ -130,12 +131,11 @@ body {
 
 .btn:hover {
 	background: #3cb0fd;
-	background-image: -webkit-linear-gradient(top, #37a4ed, #3498db);
-	background-image: -moz-linear-gradient(top, #37a4ed, #3498db);
-	background-image: -ms-linear-gradient(top, #37a4ed, #3498db);
-	background-image: -o-linear-gradient(top, #37a4ed, #3498db);
-	background-image: linear-gradient(to bottom, #37a4ed, #3498db);
-	/* #3cb0fd */
+	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
 	text-decoration: none;
 }
 /* END BUTTON */
