--- a/css/contact.css
+++ b/css/contact.css
@@ -81,14 +81,14 @@
 	background-repeat: no-repeat;
 }
 
-#email {
+#email-from {
 	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
 	background-size: 30px 30px;
 	background-position: 11px 8px;
 	background-repeat: no-repeat;
 }
 
-#email:focus {
+#email-from:focus {
 	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
 	background-size: 30px 30px;
 	background-position: 11px 8px;
