--- a/css/main.css
+++ b/css/main.css
@@ -34,34 +34,12 @@ body {
 	list-style-type: none;
 }
 
-.btn {
-	background: #3498db;
-	background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-	background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-	background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-	background-image: -o-linear-gradient(top, #3498db, #2980b9);
-	background-image: linear-gradient(to bottom, #3498db, #2980b9);
-	/* #2980b9 */
-	-webkit-border-radius: 0;
-	-moz-border-radius: 0;
-	border-radius: 0px;
-	border: 2px solid #187bb8;
-	font-family: Arial;
-	color: #ffffff;
-	font-size: 18px;
-	padding: 10px 20px 10px 20px;
-	text-decoration: none;
-	/* added by brandon */
-	margin-top: 10px;
+/* END BUTTON */
+
+/* FOUNDATION MODIFICATIONS */
+
+#main-nav-row {
+	margin-bottom: 15px;
 }
 
-.btn:hover {
-	background: #3cb0fd;
-	background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-	background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-	text-decoration: none;
-}
-/* END BUTTON */
+/******************************/
