contact.php: submission alert

--- a/css/contact.css
+++ b/css/contact.css
@@ -19,15 +19,18 @@
 /* hidden until message is submitted */
 #submission-alert {
 	display: none;
-	margin-top: 60px;
 	width: 60%;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
 	color: #fff;
-	padding: 2px 20px;
+	padding: 10px 20px;
 	border-radius: 3px;
-	margin-right: auto;
+	line-height: 10px;
+}
+
+#submission-alert p {
+	margin: 0;
 }
 
 .submission-success {
