--- a/foundation/css/foundation.css
+++ b/foundation/css/foundation.css
@@ -4433,7 +4433,7 @@ textarea {
   display: block;
   font-size: 0.875rem;
   margin: 0 0 1rem 0;
-  padding: 0.5rem;
+/*   padding: 0.5rem; */
   height: 2.3125rem;
   width: 100%;
   -webkit-box-sizing: border-box;
