--- a/foundation/css/foundation.css
+++ b/foundation/css/foundation.css
@@ -4431,7 +4431,7 @@ textarea {
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   color: rgba(0, 0, 0, 0.75);
   display: block;
-  font-size: 0.875rem;
+/*   font-size: 0.875rem; */
   margin: 0 0 1rem 0;
 /*   padding: 0.5rem; */
   height: 2.3125rem;
