--- a/foundation/css/foundation.css
+++ b/foundation/css/foundation.css
@@ -4427,7 +4427,7 @@ textarea {
   -webkit-appearance: none;
   background-color: white;
   font-family: inherit;
-  border: 1px solid #cccccc;
+/*   border: 1px solid #cccccc; */
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
   color: rgba(0, 0, 0, 0.75);
   display: block;
