--- a/css/photos.css
+++ b/css/photos.css
@@ -1,4 +1,9 @@
-#jssor-container {
-    margin: 40px 0;
+.masonry-brick {
+	width: 220px;
+	margin: 10px;
+	float: left;
 }
 
+#masonryContainer {
+	width: 0 auto;
+}
