--- a/css/contact.css
+++ b/css/contact.css
@@ -93,10 +93,13 @@
 	font-size: 18px;
 	border-radius: 0px;
 	line-height: 22px;
-	/* 	background-color: #FBFBFB; */
 	padding: 13px 13px 13px 54px;
 	margin-bottom: 10px;
 	width: 100%;
 	box-sizing: border-box;
 	border: 3px solid transparent;
+}
+
+span.mandatory-field {
+	color: #008CBA;
 }
